# UAED_Octave

./: .gitignore  pyproject.toml  setup.py  test_uaed.py  test_uaed_multicue.py  train_uaed.py  train_uaed_pretrain.py  utils.py
data/: data_loader_one_random_alpha_uncert.py  data_loader_one_random_drx_voc.py  data_loader_one_random_multicue_uncert.py  data_loader_one_random_uncert.py
eval_muge_best/: best_ods_ois.py  select_best_ods_png.py  select_best_ois_png.py  utils_ois.py
model/: model_cls.py  octave_convolution.py  octave_unet.py  sigma_logit_octave_unetpp.py  sigma_logit_unetpp.py  sigma_logit_unetpp_alpha_ffthalf_feat.py
